# MLOps-Vishal_Kishore-B23CS1078

./: .dockerignore  .gitattributes  .gitignore  B23CS1078_ass_4_tuned_en_to_hi.ipynb  Dockerfile  Dockerfile.eval  README.md  data.py  docker-compose.yml  eval.py  eval_results.json  eval_results_from_hf.json  fintech_contract.yaml  label_maps.json  main.py  orders_contract.yaml  pyproject.toml  ray_tune.ipynb  requirements.txt  rides_contract.yaml  task.md  thermostat_contract.yaml  train.py  utils.py
assignment1/: README.md
code/: ass1.ipynb  dataloader.py  pyproject.toml  train.py
model/: upload.py
model/q1/: README.md  q1_best_lora_model.pt
model/q2/: README.md  q2_classifier_best_model.pt  q2_detector_bim_best_model.pt  q2_detector_pgd_best_model.pt
outputs/q1/: grid_summary.csv  optuna_summary.json
outputs/q1/baseline-head-only/: epoch_metrics.csv  summary.json
outputs/q1/lora-r16-a2-d0.029904697335953245/: epoch_metrics.csv  summary.json
outputs/q1/lora-r16-a4-d0.21510817938661703/: epoch_metrics.csv  summary.json
outputs/q1/lora-r16-a8-d0.04923638016667839/: epoch_metrics.csv  summary.json
outputs/q1/lora-r2-a16-d0.09065616476264178/: epoch_metrics.csv  summary.json
outputs/q1/lora-r2-a16-d0.15387248286776553/: epoch_metrics.csv  summary.json
outputs/q1/lora-r2-a2-d0.1/: epoch_metrics.csv  summary.json
outputs/q1/lora-r2-a4-d0.1/: epoch_metrics.csv  summary.json
outputs/q1/lora-r2-a8-d0.1/: epoch_metrics.csv  summary.json
outputs/q1/lora-r2-a8-d0.26232847833410405/: epoch_metrics.csv  summary.json
outputs/q1/lora-r4-a2-d0.1/: epoch_metrics.csv  summary.json
outputs/q1/lora-r4-a2-d0.10934600683469325/: epoch_metrics.csv  summary.json
outputs/q1/lora-r4-a4-d0.04549050968100352/: epoch_metrics.csv  summary.json
outputs/q1/lora-r4-a4-d0.06540824825555978/: epoch_metrics.csv  summary.json
outputs/q1/lora-r4-a4-d0.06803226053468923/: epoch_metrics.csv  summary.json
outputs/q1/lora-r4-a4-d0.1/: epoch_metrics.csv  summary.json
outputs/q1/lora-r4-a8-d0.1/: epoch_metrics.csv  summary.json
outputs/q1/lora-r4-a8-d0.22598934360388875/: epoch_metrics.csv  summary.json
outputs/q1/lora-r8-a16-d0.14008907534268253/: epoch_metrics.csv  summary.json
outputs/q1/lora-r8-a2-d0.1/: epoch_metrics.csv  summary.json
outputs/q1/lora-r8-a2-d0.29902394574066726/: epoch_metrics.csv  summary.json
outputs/q1/lora-r8-a4-d0.08489358079849357/: epoch_metrics.csv  summary.json
outputs/q1/lora-r8-a4-d0.1/: epoch_metrics.csv  summary.json
outputs/q1/lora-r8-a4-d0.13455321132345466/: epoch_metrics.csv  summary.json
outputs/q1/lora-r8-a4-d0.1748516628464663/: epoch_metrics.csv  summary.json
outputs/q2/classifier/: summary.json  (+1 more)
ques_1/: __init__.py  train_q1.py
ques_2/: __init__.py  train_q2.py
question1/: .dockerignore  Dockerfile  Dockerfile.onnx  README.md  common.py  compare_results.py  export_onnx.py  infer_onnx.py  prepare_prompt.py  pyproject.toml  requirements-onnx.txt  train.py  train_lora.py
question1/cpp/: CMakeLists.txt  main.cpp
question1/scripts/: run_question1_onnx.sh  verify_onnx_env.sh
question1/util/: __init__.py  huggingface.py
question2/: .dockerignore  Dockerfile  main.py  pyproject.toml  translate.py
question2/Question2/: test_split.json
question2/references/: input.rtf
question3/: Dockerfile  README.md  main.py  output.txt  pyproject.toml
question3/Question2/: README.md  history.json  metrics.json
question3/references/: output.rtf
results/: results.csv  results_summary.csv
set_a/: Dockerfile.evaluate  Dockerfile.train  Dockerfile_local.evaluate  Dockerfile_local.train  evaluate.py  exp.md  train.py
setb/: Dockerfile.train  train.py
(+22 files in other folders)
