[project]
name = "mlops-vishal-kishore-b23cs1078"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
        "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "ray[tune]>=2.54.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
]
