[project]
name = "lora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adversarial-robustness-toolbox>=1.20.1",
    "huggingface-hub>=1.9.0",
    "matplotlib>=3.10.8",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "peft>=0.18.1",
    "scikit-learn>=1.8.0",
    "timm>=1.0.26",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
]
