[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sacrebleu>=2.6.0",
    "sentencepiece>=0.2.1",
    "striprtf>=0.0.29",
    "torch>=2.6.0",
    "transformers>=4.46.0",
]

[project.optional-dependencies]
dev = []
