[project]
name = "question3-segmentation"
version = "0.1.0"
description = "UNet-based semantic segmentation training and Gradio app for Question2."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.0.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pillow>=10.4.0",
    "torch==2.6.0",
    "torchvision>=0.21.0",
]

[project.optional-dependencies]
dev = []
